[package]
name = "invaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
env_logger = "0.10.0"
log = "0.4.17"
i8080 = { path = "../i8080" }
pollster = "0.3.0"
wgpu = "0.15.1"
winit = "0.28.3"
